Layout shift correction

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -73,8 +73,10 @@
 /*  From TypeScale*/
 html {
   font-size: var(--baseFontSize);
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
   /* overflow-y: scroll; */
+  width:100vw;
+  overflow-x:hidden;
 } 
 
 *{
